--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -2,7 +2,7 @@
 <div class="grid grid-pad">
     <a *ngFor="let hero of heroes" class="col-1-5" routerLink="/detail/{{hero.id}}">
         <div class="module hero">
-            <h4>{{hero.name}}</h4>
+            <span class="badge">{{hero.id}}</span> {{hero.name}}
         </div>
     </a>
 </div>
